<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appThemePrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/message"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/tv_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_imports"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tv_statistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistic"
                android:padding="10dp"/>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <include layout="@layout/fragment_recycler_view"/>

</LinearLayout>