<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
	<RelativeLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="16dp"
    	android:orientation="horizontal">
    	
	    <EditText
	        android:id="@+id/edtvt_input_verifycode"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:background="@drawable/edt_border"
	        android:padding="16dp"
	        android:drawablePadding="8dp"
	        android:drawableLeft="@drawable/check_code"
	        android:hint="@string/input_verification_code_tips"
	        android:textSize="16sp"
	        android:singleLine="true"
	        android:inputType="number"
	        android:textColor="@color/black"
	        android:textCursorDrawable="@null"/>
	    
	    <android.support.v7.widget.AppCompatButton
	        android:id="@+id/btn_regain_verifycode"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_marginRight="8dp"
	        android:padding="8dp"
	        android:layout_alignParentRight="true"
	    	android:gravity="center"
	    	android:layout_centerVertical="true"
	    	android:background="@drawable/btn_small_white_selector"
	        android:text="@string/regain_verify_code"
	        android:textSize="14sp"
	        android:textColor="@color/green"/>
	    
    </RelativeLayout>
    
	<android.support.v7.widget.AppCompatButton 
		    android:id="@+id/btn_next_inputstore"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:gravity="center"
		    android:layout_margin="16dp"
		    android:background="@drawable/btn_small_white_selector"
		    android:text="@string/the_next_step"
		    android:textColor="@color/green"
		    android:textSize="16sp"/>
</LinearLayout>
