<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >
 
    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/verifycode_already_send"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"/>

    <TextView
        android:id="@+id/tv_userphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:layout_below="@id/tv_tips"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:visibility="visible"/>
	    
    
	 <LinearLayout 	   
	     	android:id="@+id/ll"     
	        android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_below="@id/tv_userphone"
    		android:background="@drawable/edt_border"
    		android:layout_marginTop="8dp"
    		android:orientation="horizontal">
    		
	    <EditText
	        android:id="@+id/edt_verifycode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:background="@null"
	        android:gravity="center_vertical"
	        android:padding="16dp"
	        android:drawablePadding="8dp"
	        android:drawableLeft="@drawable/check_code"
	        android:hint="@string/input_verification_code_tips"
	        android:singleLine="true"
	        android:textSize="16sp"
	        android:textColor="@color/black"
	        android:textCursorDrawable="@null"/>
	    
	    <android.support.v7.widget.AppCompatButton
	        android:id="@+id/btn_regain_verifycode"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_marginRight="8dp"
	    	android:paddingRight="8dp"
	    	android:paddingLeft="8dp"
	    	android:gravity="center"
	    	android:background="@drawable/btn_small_white_selector"
	        android:text="@string/regain_verify_code"
	        android:textSize="14sp"
	        android:textColor="@color/green"/>
	    </LinearLayout>	  

	<android.support.v7.widget.AppCompatButton
	    android:id="@+id/btn_next" 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:layout_below="@id/ll"
	    android:background="@drawable/btn_small_white_selector"
	    android:layout_gravity="center"
	    android:layout_marginTop="24dp"
	    android:paddingRight="8dp"
	    android:paddingLeft="8dp"
	    android:gravity="center"
	    android:text="@string/the_next_step"
	    android:textColor="@color/green"
	    android:textSize="16sp"/> 
</RelativeLayout>
